# django-yarr

./: .gitmodules  Makefile  README.md  docker-compose.yaml  main.py
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: python-publish.yml
cloudbuild/: build-deploy-migrate.yaml  check-feeds.yaml  deploy.yaml  generate-feeds.yaml  migrate.yaml
mywriters/: README.md  entrypoint.sh  manage.py  pyproject.toml
mywriters/cloudbuild/: build-deploy-migrate.yaml  check-feeds.yaml
mywriters/infra/: Dockerfile  cached.dockerfile  db-local.env  entrypoint.sh  pyproject.toml
mywriters/mywriters/: asgi.py  forms.py  models.py  settings.py  urls.py  views.py
mywriters/mywriters/generate_feeds/: haaretz.py
mywriters/mywriters/migrations/: 0001_initial.py  0002_catalogue.py  0003_auto_20201228_2057.py  (+4 more)
mywriters/templates/: base.html  index.html
rrs-generator/: main.py
rss-generator/: README.md  main.py
ui/: Dockerfile  README.md  cloudbuild.yaml  docker-compose.yaml  pyproject.toml
ui/cloudbuild/: build-deploy-migrate.yaml  check-feeds.yaml  deploy.yaml  migrate.yaml
ui/infra/: cloudbuild.yaml  migrate-cloudbuild.yaml
ui/mywriter/mywriter/: settings.py  urls.py
ui/mywriter/templates/: base.html
ui/mywriters/: Dockerfile  entrypoint.sh  pyproject.toml
ui/mywriters/mywriters/: settings.py  urls.py  wsgi.py
ui/mywriters/mywriters/migrations/: 0001_initial.py
yarr/: models.py  views.py
yarr/migrations/: 0002_auto_20201229_1842.py  0003_remove_feed_users.py  0004_feed_rss.py  0005_auto_20210108_1400.py  0006_auto_20210110_0540.py
(+8 files in other folders)
