[tool.poetry]
name = "mywriters-ui"
version = "0.1.0"
description = ""
authors = ["Noam Elfanbaum <noam.elf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.4"
django-yarr = "^0.6.1"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
