[tool.poetry]
name = "mywriters-ui"
version = "0.1.0"
description = ""
authors = ["Noam Elfanbaum <noam.elf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.4"
gunicorn = "^20.0.4"
psycopg2-binary = "^2.8.6"
Django-environ = "^0.4.5"
# django-yaa-settings = "^1.1.0"
# bleach = ">=1.2.1"
# feedparser = ">=5.1.3"
django-yarr = { git = "https://github.com/noamelf/django-yarr.git", branch = "develop" }

[tool.poetry.dev-dependencies]
ipython = "^7.19.0"
django_extensions = "^3.1.0"
bpython = "^0.20.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
